fixed scss for index buttons on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -245,9 +245,6 @@ hr.active {
 	#main_paragraph {
 		font-size: 1.5rem;
 	}
-	#main_button{
-		font-size: 1em;
-	}
 	.next_section{
 		text-align: center;
 		grid-template-columns: none;
@@ -301,13 +298,13 @@ hr.active {
 		}
 	}
 	#main_button{
-		font-size: 1.5rem;
+		font-size: 1em;
 		&:hover {
 			font-size: 1.5rem;
 		}
 	}
 	#contact_button{
-		font-size: 1.5rem;
+		font-size: 1em;
 		&:hover {
 			font-size: 1.5rem;
 		}
